# Aktags

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  aktags-daemon.service  aktags.desktop  build.sh  mod.rs
.github/workflows/: build.yml
src/: auto_update.rs  config.rs  daemon.rs  db.rs  diagnostics.rs  extractor.rs  graveyard.rs  icon.rs  main.rs  mime.rs  tagger.rs  taxonomy.rs  ui.rs  updater.rs
src/sync/: client.rs  discovery.rs  identity.rs  mod.rs
src/ui/: app.rs  browser.rs  settings.rs  tag_manager.rs  theme.rs
